--- a/studentsystem/src/main/resources/application.properties
+++ b/studentsystem/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/fullstack
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
